# lhbg-book-impl

./: Color.hs  Convert.hs  Html.hs  Main.hs  Markup.hs  hello.hs  hs-blog.cabal
Html/: Internal.hs
app/: Main.hs  OptParse.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.0.2/: hs-blog-0.1.0.0-inplace.conf  package.cache
src/: HsBlog.hs
src/HsBlog/: Convert.hs  Directory.hs  Html.hs  Markup.hs
src/HsBlog/Html/: Internal.hs
test/: MarkupParsingSpec.hs
