cabal-version:       2.4

name:                hs-blog
version:             0.1.0.0
synopsis:            Synopsis will appear in the hackage package listing and search
description:         The description will appear at the top of a library
homepage:            Homepage url
bug-reports:         issue-tracker url
license:             BSD-3-Clause
license-file:        License.txt
author:              Author name
maintainer:          Maintainer email
category:            Hackage categories, separated by commas
extra-doc-files:
  README.md

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , directory
    , filepath
  exposed-modules:
    HsBlog
      HsBlog.Convert
      HsBlog.Directory
      HsBlog.Html
        HsBlog.Html.Internal
      HsBlog.Markup
  -- other-modules:

executable hs-blog-gen
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
      base
    , directory
    , filepath
    , optparse-applicative
    , hs-blog
  ghc-options:
    -O
